// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sample block 1`] = `
Array [
  <h1 />,
  <h2 />,
  <h3 />,
  <p />,
  <ul>
    <li />
    <li />
    <li />
  </ul>,
]
`;

exports[`Syntax Highlight as CodeBlock 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#2d2d2d",
      "color": "#ccc",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "#ccc",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#cc99cd",
        }
      }
    >
      const
    </span>
     foo 
    <span
      className="token"
      style={
        Object {
          "color": "#67cdcc",
        }
      }
    >
      =
    </span>
     hoge
    
    <span
      className="token"
      style={
        Object {
          "color": "#cc99cd",
        }
      }
    >
      const
    </span>
     
    <span
      className="token function-variable"
      style={
        Object {
          "color": "#f08d49",
        }
      }
    >
      onClick
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#67cdcc",
        }
      }
    >
      =
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      (
    </span>
    <span
      className="token parameter"
      style={Object {}}
    >
      e
      <span
        className="token"
        style={
          Object {
            "color": "#ccc",
          }
        }
      >
        :
      </span>
       
      <span
        className="token maybe-class-name"
        style={Object {}}
      >
        Event
      </span>
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      )
    </span>
     
    <span
      className="token arrow"
      style={
        Object {
          "color": "#67cdcc",
        }
      }
    >
      =&gt;
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      {
    </span>
    
      
    <span
      className="token"
      style={
        Object {
          "color": "#f08d49",
        }
      }
    >
      dispatch
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      (
    </span>
    e 
    <span
      className="token"
      style={
        Object {
          "color": "#67cdcc",
        }
      }
    >
      **
    </span>
     
    <span
      className="token"
      style={
        Object {
          "color": "#f08d49",
        }
      }
    >
      2
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      )
    </span>
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      }
    </span>
    
    
    <span
      className="token"
      style={
        Object {
          "color": "#e2777a",
        }
      }
    >
      <span
        className="token"
        style={
          Object {
            "color": "#e2777a",
          }
        }
      >
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#f8c555",
            }
          }
        >
          SomeComponent
        </span>
      </span>
      <span
        className="token"
        style={
          Object {
            "color": "#ccc",
          }
        }
      >
        &gt;
      </span>
    </span>
    <span
      className="token plain-text"
      style={Object {}}
    >
      
      hello 
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      {
    </span>
    foo
    <span
      className="token"
      style={
        Object {
          "color": "#ccc",
        }
      }
    >
      }
    </span>
    <span
      className="token plain-text"
      style={Object {}}
    >
      
    
    </span>
    <span
      className="token"
      style={
        Object {
          "color": "#e2777a",
        }
      }
    >
      <span
        className="token"
        style={
          Object {
            "color": "#e2777a",
          }
        }
      >
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#f8c555",
            }
          }
        >
          SomeComponent
        </span>
      </span>
      <span
        className="token"
        style={
          Object {
            "color": "#ccc",
          }
        }
      >
        &gt;
      </span>
    </span>
    
  
  </code>
</pre>
`;

exports[`Syntax Highlight as Markdown 1`] = `
Array [
  <p />,
  .emotion-0 {
  margin-bottom: 2rem;
}

<div
    className="emotion-0"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#2d2d2d",
          "color": "#ccc",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        <span
          className="token"
          style={
            Object {
              "color": "#cc99cd",
            }
          }
        >
          const
        </span>
         foo 
        <span
          className="token"
          style={
            Object {
              "color": "#67cdcc",
            }
          }
        >
          =
        </span>
         hoge

        <span
          className="token"
          style={
            Object {
              "color": "#cc99cd",
            }
          }
        >
          const
        </span>
         
        <span
          className="token function-variable"
          style={
            Object {
              "color": "#f08d49",
            }
          }
        >
          onClick
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#67cdcc",
            }
          }
        >
          =
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter"
          style={Object {}}
        >
          e
          <span
            className="token"
            style={
              Object {
                "color": "#ccc",
              }
            }
          >
            :
          </span>
           
          <span
            className="token maybe-class-name"
            style={Object {}}
          >
            Event
          </span>
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          )
        </span>
         
        <span
          className="token arrow"
          style={
            Object {
              "color": "#67cdcc",
            }
          }
        >
          =&gt;
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          {
        </span>
        

        <span
          className="token"
          style={
            Object {
              "color": "#f08d49",
            }
          }
        >
          dispatch
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          (
        </span>
        e 
        <span
          className="token"
          style={
            Object {
              "color": "#67cdcc",
            }
          }
        >
          **
        </span>
         
        <span
          className="token"
          style={
            Object {
              "color": "#f08d49",
            }
          }
        >
          2
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          )
        </span>
        

        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          }
        </span>
        

        <span
          className="token"
          style={
            Object {
              "color": "#e2777a",
            }
          }
        >
          <span
            className="token"
            style={
              Object {
                "color": "#e2777a",
              }
            }
          >
            <span
              className="token"
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              &lt;
            </span>
            <span
              className="token"
              style={
                Object {
                  "color": "#f8c555",
                }
              }
            >
              SomeComponent
            </span>
          </span>
          <span
            className="token"
            style={
              Object {
                "color": "#ccc",
              }
            }
          >
            &gt;
          </span>
        </span>
        <span
          className="token plain-text"
          style={Object {}}
        >
          
hello 
        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          {
        </span>
        foo
        <span
          className="token"
          style={
            Object {
              "color": "#ccc",
            }
          }
        >
          }
        </span>
        <span
          className="token plain-text"
          style={Object {}}
        >
          

        </span>
        <span
          className="token"
          style={
            Object {
              "color": "#e2777a",
            }
          }
        >
          <span
            className="token"
            style={
              Object {
                "color": "#e2777a",
              }
            }
          >
            <span
              className="token"
              style={
                Object {
                  "color": "#ccc",
                }
              }
            >
              &lt;/
            </span>
            <span
              className="token"
              style={
                Object {
                  "color": "#f8c555",
                }
              }
            >
              SomeComponent
            </span>
          </span>
          <span
            className="token"
            style={
              Object {
                "color": "#ccc",
              }
            }
          >
            &gt;
          </span>
        </span>
        
“
        <span
          className="token template-string"
          style={Object {}}
        >
          <span
            className="token template-punctuation"
            style={
              Object {
                "color": "#7ec699",
              }
            }
          >
            \`
          </span>
          <span
            className="token template-punctuation"
            style={
              Object {
                "color": "#7ec699",
              }
            }
          >
            \`
          </span>
        </span>
        \`
      </code>
    </pre>
  </div>,
]
`;

exports[`nl2br 1`] = `
Array [
  <p />,
  .emotion-0 {
  margin-bottom: 2rem;
}

<div
    className="emotion-0"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#2d2d2d",
          "color": "#ccc",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        a
b
c
“\`\`\`
      </code>
    </pre>
  </div>,
]
`;

exports[`nl2br-link 1`] = `
.emotion-1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  font-size: 0.9em;
}

<p>
  <a
    className="emotion-1"
    href="http://example.com"
  >
    <p
      className="emotion-0"
      value="http://example.com"
    >
      http://example.com
    </p>
  </a>
  <br />
  <p
    className="emotion-0"
    value="bbb"
  >
    bbb
  </p>
</p>
`;

exports[`nl2br-link-not-break 1`] = `
.emotion-3 {
  font-size: 0.9em;
  line-height: 1.3em;
}

.emotion-3 h1,
.emotion-3 h2,
.emotion-3 h3,
.emotion-3 h4,
.emotion-3 h5,
.emotion-3 h6 {
  margin: 1em 0;
}

.emotion-2 {
  margin-bottom: 0.8em;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-3"
>
  <p
    className="emotion-2"
  >
    今回は
    <a
      className="emotion-0"
      href="https://github.com/rexxars/react-markdown#parsing-html"
    >
      <code>
        react-markdown
      </code>
    </a>
    と
    <a
      className="emotion-0"
      href="https://github.com/conorhastings/react-syntax-highlighter"
    >
      <code>
        react-sytnax-highlight
      </code>
    </a>
  </p>
</div>
`;

exports[`web-component 1`] = `
<p>
  <x-some-item />
</p>
`;
